NEWS
====

* 2012/04/25 v.1.4

    - New feature: compare 2 hex files using hex dump
      as string representation. Feature available as
      worker function diff_dumps() and as command-line
      utility hexdiff.py (#627924).
    - Changes in the codebase suggested by 2to3 tool to provide
      compatibility with Python3. Now sources can be successfully
      converted to Python3 with 2to3 utility. 
      See Python 3 notes in README.txt and documentation.
      (Thanks to Bernhard Leiner for his help)
    - Fixed bug #988148: IntelHex16bit should copy all public attributes
      from source IntelHex 8-bit object. (Thanks to Morgan McClure)

* 2010/11/24 v.1.3

    - hex2dump: show 0x7F character as dot for better compatibility 
      with GNU less utility.
    - tobinarray, tobinfile, tobinstr: added size parameter. (Bug #408748)
    - fixed error in hexmerge.py script. (#676023)

* 2009/08/04 v.1.2

    - Fixed bug 372620: tobinarray on empty file should return pad bytes 
      when address range explicitly specified.
    - Improved docstrings: explicitly say that 'end' param of to-* methods 
      is always inclusive. (see bug #372625 for details).
    - Improved documentation on ih.dump(tofile).

* 2009/03/12 v.1.1

    - Fixed bug in writing hex files with small chains of bytes
    - Improved Python 2.6 compatibility

* 2009/01/01 v.1.0

    - Improved API, better performance
    - New User Manual (Zachary Clifford)

* 2007/06/16 v.0.9.0 (New API release)

    - New API for IntelHex16bit

* 2007/04/27 v.0.8.6 (BugFix and Performance improvements)

    - IntelHex is able to read/write start address records
      (HEX record type 03 and 05). (fix bug #109872)
    - Backport (from 0.9 branch) of performance improvements 
      for reading hex files

* 2007/04/22 v.0.9.devel (New API pre-release)

    - New API
    - Performance improvements: read hex file now ~45% faster

* 2007/02/26 v.0.8.5 (BugFix Release)
