@@ -2,7 +2,7 @@
 Python IntelHex User Manual
 ---------------------------
 
-:Version: 1.4
+:Version: 1.4.1
 
 .. contents::
 .. sectnum::
