@@ -49,9 +49,9 @@ copyright = '2005-2012, Alexander Belchenko'
 # built documents.
 #
 # The short X.Y version.
-version = '1.4'
+version = '1.4.1'
 # The full version, including alpha/beta/rc tags.
-release = '1.4'
+release = '1.4.1'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
